--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -11,6 +11,16 @@
   &-content {
     display: flex;
     align-items: center;
+    &-left {
+      width: 55%;
+    }
+    &-right {
+      margin-left: -210px;
+      margin-right: -220px;
+      /* width: 100%; */
+      margin-top: 0;
+      min-width: 0;
+    }
   }
   &-heading {
     font-size: 6.6rem;
@@ -18,6 +28,7 @@
     color: var(--white-color);
     line-height: 1.2;
     font-weight: 700;
+    padding-top: 25px;
   }
   &-description {
     line-height: 2.2;
@@ -65,6 +76,13 @@
     display: flex;
     align-items: center;
     padding-top: 45px;
+    &-google,
+    &-dropbox {
+      margin: 0;
+      min-width: 0;
+      max-width: 100%;
+      height: auto;
+    }
     &-title {
       font-size: 1.6rem;
       color: var(--white-color);
@@ -76,9 +94,26 @@
       justify-content: center;
       align-items: center;
       flex: 1;
+      height: 33px;
       &-item:not(:last-child) {
         margin-right: 30px;
       }
     }
+  }
+  &-img {
+    box-sizing: border-box;
+    margin: 0;
+    min-width: 0;
+    max-width: 100%;
+    height: auto;
+  }
+  &-content-right {
+    margin-left: -110px;
+    margin-right: -221px;
+    /* width: 100%; */
+    margin-top: 0;
+    min-width: 0;
+    height: auto;
+    margin-bottom: -70px;
   }
 }
