--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -117,3 +117,94 @@
     margin-bottom: -70px;
   }
 }
+.wrapper-modal-video {
+  position: relative;
+  max-width: 940px;
+  max-height: 550px;
+  width: 100%;
+  display: block;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  transition: all 0.3s ease-in-out;
+  align-items: center;
+}
+.modal-video {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  & .video {
+    width: 90%;
+    display: block;
+    transition: all 0.3s ease-in-out;
+    height: 90%;
+  }
+}
+.modal-video-close-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  position: absolute;
+  z-index: 2;
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  overflow: hidden;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+
+  &::before {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    top: 50%;
+    left: 0;
+    background: #fff;
+    border-radius: 5px;
+    margin-top: -6px;
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    top: 50%;
+    left: 0;
+    background: #fff;
+    border-radius: 5px;
+    margin-top: -6px;
+    transform: rotate(-45deg);
+  }
+}
+@media screen and (max-width: 780px) {
+  .home-content-left {
+    width: 85%;
+  }
+  .home-content-right {
+    display: none;
+  }
+}
+@media screen and (max-width: 611px) {
+  .home-heading {
+    font-size: 4rem;
+  }
+  .home-content-left {
+    width: 90%;
+  }
+}
