--- a/src/components/Testimonial/Testimonial.scss
+++ b/src/components/Testimonial/Testimonial.scss
@@ -1,4 +1,5 @@
 .testi {
+  padding: 120px 0;
   &-heading p {
     font-size: 1.4rem;
     letter-spacing: 2px;
@@ -48,13 +49,15 @@
     &-show {
       display: flex;
       align-items: center;
-      transition: all 1s linear;
+      transition: all 0.5s ease-in;
+      width: 100%;
     }
     &-item {
       flex: 1 1 auto;
       position: relative;
-      width: 393px;
+      min-width: calc(100% / 3 - 20px);
 
+      display: flex;
       &-user {
         display: flex;
         align-items: center;
@@ -119,5 +122,20 @@
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 1.4;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .testi-slider-item {
+    min-width: calc(50% - 20px);
+  }
+}
+@media screen and (max-width: 640px) {
+  .testi {
+    padding: 80px 0;
+  }
+}
+@media screen and (max-width: 605px) {
+  .testi-slider-item {
+    min-width: calc(100% - 20px);
   }
 }
