--- a/src/components/Features/Features.scss
+++ b/src/components/Features/Features.scss
@@ -464,6 +464,9 @@
   .features-core-img {
     padding: 0 25px;
   }
+  .features-list-item-img {
+    margin-bottom: 12px;
+  }
   .features-exciting-list {
     grid-template-columns: repeat(1, 1fr);
     width: 80%;
