--- a/src/components/Payment/Payment.scss
+++ b/src/components/Payment/Payment.scss
@@ -153,7 +153,7 @@
   }
   &-package-benefit-item {
     display: flex;
-    align-items: stretch;
+    align-items: baseline;
   }
   &-package-benefit p {
     padding-right: 30px;
@@ -328,4 +328,7 @@
   .payment-package-item:not(:first-child) {
     margin-top: 40px;
   }
+}
+.check-icon {
+  margin-right: 12px;
 }
